objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>App_status__c</fullName>
        <label>App status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InProgress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complex_Bid_Approval_Type_Child_Records__c</fullName>
        <label>Complex Bid Approval Type Child Records</label>
        <summaryFilterItems>
            <field>PRX_Approvals__c.PRX_Approval_Type__c</field>
            <operation>equals</operation>
            <value>Complex Bid</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>PRX_Approvals__c.PRX_Final_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>PRX_Approvals__c.PRX_Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Request_Sent__c</fullName>
        <description>Calculate number of childs</description>
        <label>Number of Child Records</label>
        <summaryForeignKey>PRX_Approvals__c.PRX_Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Responses_Received__c</fullName>
        <label>Number of approved records</label>
        <summaryFilterItems>
            <field>PRX_Approvals__c.PRX_Final_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>PRX_Approvals__c.PRX_Opportunity_Name__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PRX_Approval_Ongoing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>You can edit the opportunity, but not close it before the approval flow has been closed.</inlineHelpText>
        <label>Approval Ongoing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRX_BCI_Opportunity_ID__c</fullName>
        <externalId>true</externalId>
        <label>BCI Opportunity ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Opportunity Entered In Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Cancelled The Opportunity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Bid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solution &amp; Service Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship With Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRX_OpportunityID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRX_Opportunity_Product_Count__c</fullName>
        <label>Opportunity Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Do_Not_Accept_Special_Characters</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Name, &quot;[a-zA-Z0-9 ]*$&quot;))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please do not enter any special characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRX_Closed_Date_NotPast</fullName>
        <active>true</active>
        <description>It should not be possible to close opportunities with close date in the past . EXCPR-2581 - Release 1 - Track 1.1</description>
        <errorConditionFormula>AND(OR(ISPICKVAL( StageName , &quot;Closed Won&quot;),ISPICKVAL(StageName , &quot;Closed Lost&quot;)), CloseDate &lt; TODAY() )</errorConditionFormula>
        <errorDisplayField>CloseDate</errorDisplayField>
        <errorMessage>Not be possible to close an opportunity with close date in the past</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRX_Opp_with_noproducts_cannotbeClosed</fullName>
        <active>true</active>
        <errorConditionFormula>AND ($Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
ISPICKVAL( StageName , &quot;Closed Won&quot;),
( PRX_Opportunity_Product_Count__c  &lt; 1)
)</errorConditionFormula>
        <errorMessage>If Opportunity don&apos;t have any products,it cannot be Closed Won</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRX_Opportunity_TotalContractValue_625k</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Amount&gt;=625000,
TEXT(StageName) ==&apos;Closed Won&apos;,Complex_Bid_Approval_Type_Child_Records__c =0,
OR( ISPICKVAL(App_status__c, &apos;&apos;),ISPICKVAL(App_status__c, &apos;Approved&apos;)))</errorConditionFormula>
        <errorMessage>Since your opportunity value has reached 625000.You will have to create approval request for complex bid before marking the opportunity as closed Won.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRX_Reopen_Closed_Opportunity</fullName>
        <active>true</active>
        <description>It should not be possible for a any user to reopen closed opportunities. EXCPR-2580. Track 1.1 - Release 1</description>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &quot;System Administrator&quot;,
OR(ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;),ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Lost&quot;)) , NOT(ISBLANK( Id )))</errorConditionFormula>
        <errorMessage>An Opportunity cannot be modified if it has reached Closed Stage</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRX_TotalContractValue_Is_More_Than_625k</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Amount &gt;= 625000, Complex_Bid_Approval_Type_Child_Records__c &gt;=1,Number_of_Request_Sent__c &gt; 0, TEXT(StageName) ==&apos;Closed Won&apos;, NOT(ISPICKVAL(App_status__c, &apos;Approved&apos;)))</errorConditionFormula>
        <errorMessage>Opportunity cannot be &apos;Closed Won&apos; for complex bid approval In-progress.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRX_Type_Mandatory_For_SalesUser</fullName>
        <active>true</active>
        <description>Type should be mandatory when Stage is Lost. Track 1.1 - Release 1 - Not applicable to Admin</description>
        <errorConditionFormula>AND( $Profile.Name  &lt;&gt;  &quot;System Administrator&quot;, TEXT(StageName) == &quot;Closed Lost&quot; , ISBLANK(TEXT( PRX_Lost_Reason__c )) )</errorConditionFormula>
        <errorDisplayField>PRX_Lost_Reason__c</errorDisplayField>
        <errorMessage>Please enter a value for Lost Reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRX_Validate_Open_Opportunities</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( App_status__c,&apos;Inprogress&apos;), ISPICKVAL( StageName , &apos;Closed Won&apos;))</errorConditionFormula>
        <errorMessage>Opportunity cannot be ¨Closed Won¨ when there is In-progress approvals</errorMessage>
    </validationRules>
</CustomObject>